--- a/webcms.csulb.edu.html
+++ b/webcms.csulb.edu.html
@@ -1,1 +1,5 @@
-<embed src="https://kbbobiles.github.io/test.pdf" type="application/pdf" />
+<html>
+  <body>
+    <embed src="https://kbbobiles.github.io/test.pdf" type="application/pdf" />   
+  </body>
+</html>
