--- a/webcms.csulb.edu.html
+++ b/webcms.csulb.edu.html
@@ -1,5 +1,5 @@
 <html>
   <body>
-    <embed src="https://kbbobiles.github.io/test.pdf" type="application/pdf" />   
+    <embed src="https://kbbobiles.github.io/test.pdf" type="application/pdf" height="100%" width="100%" />   
   </body>
 </html>
