--- a/webcms.csulb.edu.html
+++ b/webcms.csulb.edu.html
@@ -1,5 +1,7 @@
 <html>
   <body>
-    <embed src="https://kbbobiles.github.io/test.pdf" type="application/pdf" height="100%" width="100%" />   
+    <div style="width: 100%; height: 100%">
+      <embed src="https://kbbobiles.github.io/test.pdf" type="application/pdf" height="100%" width="100%" />   
+    </div>
   </body>
 </html>
