--- a/webcms.csulb.edu.html
+++ b/webcms.csulb.edu.html
@@ -1,7 +1,15 @@
-<html>
+<!-- <html>
   <body>
     <div style="width: 100%; height: 100%">
       <embed src="https://kbbobiles.github.io/test.pdf" type="application/pdf" height="100%" width="100%" />   
     </div>
   </body>
+</html> -->
+<!DOCTYPE html>
+<html>
+<body>
+<div style="width: 100%; height: 100%">
+<iframe src="https://kbbobiles.github.io/test.pdf" height="100%" width="100%"></iframe>
+</div>
+</body>
 </html>
