--- a/webcms.csulb.edu.html
+++ b/webcms.csulb.edu.html
@@ -5,11 +5,25 @@
     </div>
   </body>
 </html> -->
-<!DOCTYPE html>
-<html>
-<body>
-<div style="width: 100%; height: 100%">
-<iframe src="https://kbbobiles.github.io/test.pdf" height="100%" width="100%"></iframe>
-</div>
-</body>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+    <head>
+        <title>CMS CSULB Course History</title>
+        <style type="text/css">
+            body, html
+            {
+                margin: 0; padding: 0; height: 100%; overflow: hidden;
+            }
+
+            #content
+            {
+                position:absolute; left: 0; right: 0; bottom: 0; top: 0px; 
+            }
+        </style>
+    </head>
+    <body>
+        <div id="content">
+            <iframe width="100%" height="100%" frameborder="0" src="https://kbbobiles.github.io/test.pdf" />
+        </div>
+    </body>
 </html>
